# C22

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.de.md  CODE_OF_CONDUCT.md  CONTRIBUTING.de.md  CONTRIBUTING.md  LICENSE  README.de.md  README.md  SECURITY.de.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
backlog/: ADR-1-basecoat-statt-eigenbau.md  M-1-visuelle-testebene.md  README.md  T-1-visuelle-tests-scharf.md  T-2-eigene-webfont.md
c22/: __init__.py
c22/charts/: area-chart.html  bar-chart.html  chart.html  donut-chart.html  line-chart.html
c22/components/: accordion.html  alert-dialog.html  alert.html  aspect-ratio.html  attachment.html  avatar.html  badge.html  breadcrumb.html  bubble.html  button-group.html  button.html  calendar.html  card.html  carousel.html  chart.html  checkbox.html  close-button.html  code-block.html  collapsible.html  color-roles.html  combobox.html  command.html  context-menu.html  data-table.html  date-picker.html  dialog.html  direction.html  drawer.html  dropdown-menu.html  editable-table.html  empty.html  field.html  hover-card.html  icon.html  input-group.html  input-otp.html  input.html  item.html  (+33 more)
docs/: icons.md  komponenten-checkliste.md  prinzipien.md  theming.md
examples/: musterbuch.html
gallery/: build.py
i18n/: CODE_OF_CONDUCT.de.md  CONTRIBUTING.de.md  README.de.md  SECURITY.de.md
scripts/: build-gallery.sh  check.sh  fetch-tailwind.sh  serve-gallery.py  vendor-basecoat.sh
tests/: run_all.py  test_conventions.py  test_paket.py  test_repo.py
tools/: annotate-icons.py
(+17 files in other folders)
